--- a/pom.xml
+++ b/pom.xml
@@ -295,6 +295,11 @@
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>4.1.2</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>ooxml-schemas</artifactId>
+		    <version>1.4</version>
+		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
 		<dependency>
