--- a/pom.xml
+++ b/pom.xml
@@ -321,6 +321,12 @@
 		    <version>3.6</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.github.s7connector</groupId>
+		    <artifactId>s7connector</artifactId>
+		    <version>2.1</version>
+		</dependency>
+		
 		
 
 	</dependencies>
