--- a/src/main/resources/application-staging.properties
+++ b/src/main/resources/application-staging.properties
@@ -1,3 +1,5 @@
 server.servlet.context-path=/api-server
 server.port=3010
 domain=https://staging.nextwavemonitoring.com
+
+uploadpath.root = /www/sources/nextwavemonitoring/staging_api/uploads
