--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,57 @@
     </profiles>
 
 	<dependencies>
+	
+	<dependency>
+	    <groupId>com.okta.spring</groupId>
+	    <artifactId>okta-spring-boot-starter</artifactId>
+	    <version>2.1.6</version>
+	</dependency>
+	
+	<dependency>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-security</artifactId>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-config</artifactId>
+	</dependency>
+	<dependency>
+	    <groupId>org.springframework.security</groupId>
+	    <artifactId>spring-security-oauth2-jose</artifactId>
+	</dependency>
+	<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-saml2-service-provider -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-saml2-service-provider</artifactId>
+    <version>5.8.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.opensaml/opensaml-core -->
+<dependency>
+    <groupId>org.opensaml</groupId>
+    <artifactId>opensaml-core</artifactId>
+    <version>4.0.1</version>
+</dependency>
+	<!-- https://mvnrepository.com/artifact/org.opensaml/opensaml-xacml-saml-api -->
+<dependency>
+    <groupId>org.opensaml</groupId>
+    <artifactId>opensaml-xacml-saml-api</artifactId>
+    <version>4.0.1</version>
+    <scope>runtime</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.opensaml/opensaml-saml-impl -->
+<dependency>
+    <groupId>org.opensaml</groupId>
+    <artifactId>opensaml-saml-impl</artifactId>
+    <version>4.0.1</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.springframework.security.extensions/spring-security-saml2-core -->
+<dependency>
+    <groupId>org.springframework.security.extensions</groupId>
+    <artifactId>spring-security-saml2-core</artifactId>
+        <version>2.0.0.M31</version>
+</dependency>
+
 	<!-- 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
