--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,5 @@ ftpSMA.server = NWEMNS01.synology.me
 ftpSMA.user = ftpsma
 ftpSMA.pass = Sunny762!
 uploadpath.sma = sma
+
+allowed.origin=https://staging.nextwavemonitoring.com
