--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,4 @@ ftpSMA.user = ftpsma
 ftpSMA.pass = Sunny762!
 uploadpath.sma = sma
 
-allowed.origin=https://staging.nextwavemonitoring.com
+allowed.origin=http://localhost:3020
