--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.profiles.active=staging
+spring.profiles.active=prod
 server.servlet.context-path=/api-server
 # Set max size file upload and max size request
 spring.servlet.multipart.max-file-size=500000KB
 spring.servlet.multipart.max-request-size=500000KB
 accessTokenValiditySeconds = 31536000 // 1 year 
 # Upload root path define
-uploadpath.root = /www/sources/nextwavemonitoring/staging_api/uploads
+uploadpath.root = /www/sources/nextwavemonitoring/production_api/uploads
 #uploadpath.root = /Volumes/Data/sources/nextwave/api/uploads
 #uploadpath.root = /var/www/sources/nextwavemonitoring/api/uploads
 
@@ -31,10 +31,5 @@ uploadpath.ftp = ftp
 ftpSMA.server = NWEMNS01.synology.me
 ftpSMA.user = ftpsma
 ftpSMA.pass = Sunny762!
-<<<<<<< HEAD
 uploadpath.sma = sma
 
-allowed.origin=http://localhost:3020
-=======
-uploadpath.sma = sma
->>>>>>> parent of 69a6c97 (Build test)
