Fixed alert auto close

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -9,9 +9,9 @@ dev_mysql_maximum_active_connections=10
 
 # Database configuration for test server 
 test_driver=com.mysql.cj.jdbc.Driver
-test_url=jdbc:mysql://database-nextwavemonitoring.chytedbzdsio.us-west-1.rds.amazonaws.com/nextwavemonitoring_production
-test_username =admin
-test_password=123654789asd!ASD
+test_url=jdbc:mysql://103.7.43.228:3306/nextwave_monitoring_db?useUnicode=true&characterEncoding=utf8
+test_username =nextwave_monitoring_db
+test_password=RJ6s3RGNaXyBTwTJ
 test_encrypt= false
 test_mysql_maximum_active_connections=10
 
@@ -23,7 +23,7 @@ prod_url=jdbc:mysql://database-nextwavemonitoring.chytedbzdsio.us-west-1.rds.ama
 prod_username =admin
 prod_password=123654789asd!ASD
 prod_encrypt= false
-prod_mysql_maximum_active_connections=100
+prod_mysql_maximum_active_connections=10000
 
 
 # Database configuration for production server AWS
@@ -32,4 +32,4 @@ staging_url=jdbc:mysql://database-nextwavemonitoring.chytedbzdsio.us-west-1.rds.
 staging_username =admin
 staging_password=123654789asd!ASD
 staging_encrypt= false
-staging_mysql_maximum_active_connections=100
+staging_mysql_maximum_active_connections=10000
