--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,18 @@
 		    <version>0.1.55</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.dhatim</groupId>
+		    <artifactId>fastexcel</artifactId>
+		    <version>0.14.0</version>
+		</dependency>
+		
+		<dependency>
+		  <groupId>org.dhatim</groupId>
+		  <artifactId>fastexcel-reader</artifactId>
+		  <version>0.14.0</version>
+		</dependency>
+		
 		
 
 	</dependencies>
