--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -9,9 +9,9 @@ dev_mysql_maximum_active_connections=10000000
 
 # Database configuration for test server 
 test_driver=com.mysql.cj.jdbc.Driver
-test_url=jdbc:mysql://103.7.43.228:3306/nextwave_monitoring_db?useUnicode=true&characterEncoding=utf8
-test_username =nextwave_monitoring_db
-test_password=RJ6s3RGNaXyBTwTJ
+test_url=jdbc:mysql://database-nextwavemonitoring.chytedbzdsio.us-west-1.rds.amazonaws.com/nextwavemonitoring_production
+test_username =admin
+test_password=123654789asd!ASD
 test_encrypt= false
 test_mysql_maximum_active_connections=10000000
 
