980 Create feature to upload pdf Single Line Diagram doc for each site.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ uploadpath.supports = supports
 uploadpath.reports = reports
 uploadpath.files = files
 uploadpath.olddata = olddata
+uploadpath.diagrams = diagrams
 
 
 # reset password expired time minutes
