--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=
+spring.profiles.active=staging
 server.servlet.context-path=/api-server
 # Set max size file upload and max size request
 spring.servlet.multipart.max-file-size=5000000KB
