--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,11 @@
 			<scope>runtime</scope>
 		</dependency>
 
+        <dependency>
+            <groupId>com.maxmind.geoip</groupId>
+            <artifactId>geoip-api</artifactId>
+            <version>1.2.14</version>
+        </dependency>
 		
 
 
