Update for Task 986 - Build a scaling feature (offset / slope) for Weather Station/ Meter/ Inverter devices

--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,11 @@
 		  <version>0.14.0</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>net.objecthunter</groupId>
+		    <artifactId>exp4j</artifactId>
+		    <version>0.4.8</version>
+		</dependency>
 		
 		
 
