--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.servlet.multipart.max-file-size=5000000KB
 spring.servlet.multipart.max-request-size=5000000KB
 accessTokenValiditySeconds = 31536000 // 1 year 
 # Upload root path define
-uploadpath.root = /www/sources/nextwavemonitoring/production_api/uploads
-#uploadpath.root = /www/wwwroot/staging-api.nextwavemonitoring.com/uploads 
+#uploadpath.root = /www/sources/nextwavemonitoring/production_api/uploads
+uploadpath.root = /www/wwwroot/production-api.nextwavemonitoring.com/uploads 
 #uploadpath.root = /Volumes/Data/sources/nextwave/api/uploads
 #uploadpath.root = /var/www/sources/nextwavemonitoring/api/uploads
 
