--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=staging
+spring.profiles.active=test
 server.servlet.context-path=/api-server
 # Set max size file upload and max size request
 spring.servlet.multipart.max-file-size=5000000KB
@@ -6,9 +6,9 @@ spring.servlet.multipart.max-request-size=5000000KB
 accessTokenValiditySeconds = 31536000 // 1 year 
 # Upload root path define
 #uploadpath.root = /www/sources/nextwavemonitoring/production_api/uploads
-uploadpath.root = /www/wwwroot/staging-api.nextwavemonitoring.com/uploads
+#uploadpath.root = /www/wwwroot/staging-api.nextwavemonitoring.com/uploads
 
-#uploadpath.root = /Volumes/Data/sources/nextwave/api/uploads
+uploadpath.root = /Volumes/Data/sources/nextwave/api/uploads
 #uploadpath.root = /var/www/sources/nextwavemonitoring/api/uploads
 
 uploadpath.galleries = galleries
