--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,18 @@
         </profile>
     </profiles>
 
+	<dependencyManagement>
+	    <dependencies>
+		      <dependency>
+			        <groupId>software.amazon.awssdk</groupId>
+			        <artifactId>bom</artifactId>
+              		<version>2.23.3</version>
+			        <type>pom</type>
+			        <scope>import</scope>
+		      </dependency>
+	    </dependencies>
+	</dependencyManagement>
+  
 	<dependencies>
 	<!-- 
 		<dependency>
@@ -356,6 +368,20 @@
 		    <version>0.4.8</version>
 		</dependency>
 		
+		<dependency>
+      		<groupId>software.amazon.awssdk</groupId>
+      		<artifactId>s3</artifactId>
+   		</dependency>
+   		
+		<dependency>
+      		<groupId>software.amazon.awssdk</groupId>
+      		<artifactId>s3-transfer-manager</artifactId>
+   		</dependency>
+   		
+   		<dependency>
+		    <groupId>software.amazon.awssdk</groupId>
+		    <artifactId>sts</artifactId>
+		</dependency>
 		
 
 	</dependencies>
