--- a/src/main/resources/mailcontent.properties
+++ b/src/main/resources/mailcontent.properties
@@ -42,10 +42,10 @@ mailDebug=true
 #mailAlert = http://avisbackofficedev.flex.com.vn/alert/
 #mailSentPassword = http://test.vinarealtor.com.vn/login
 
-mailResetPassword = https://nextwavemonitoring.com/reset-password/
-mailSetPassword = https://nextwavemonitoring.com/set-password/
+mailResetPassword = https://staging.nextwavemonitoring.com/reset-password/
+mailSetPassword = https://staging.nextwavemonitoring.com/set-password/
 mailAlert = https://nextwavemonitoring.com/alert/
-mailSentPassword = https://nextwavemonitoring.com/login
+mailSentPassword = https://staging.nextwavemonitoring.com/login
 
 
 #reset password
