Bug Fix: fix url for AWS S3 file upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,5 +44,5 @@ domain_cronjob_api = https://staging-api.nextwavemonitoring.com
 aws.roleARN = arn:aws:iam::264994427367:role/AWSS3AssumeRole
 aws.roleSessionName = nwemonSessionName
 aws.bucketName = files.nextwavemonitoring.com
-aws.rootFolder = /uploads
+aws.rootFolder = uploads
 aws.regionName = us-west-1
