--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ uploadpath.reports = reports
 uploadpath.files = files
 uploadpath.olddata = olddata
 uploadpath.diagrams = diagrams
+uploadpath.overviewwwidget = overvieww_widget
 
 
 # reset password expired time minutes
